# ReducedBitcoin

./: .gitignore  Makefile.am  configure.ac
src/: Makefile.am  Makefile.leveldb.include  bitcoin-cli.cpp  bitcoind.cpp  chainparams.cpp  chainparams.h  chainparamsbase.h  clientversion.cpp  init.cpp  init.h  miner.cpp  net_processing.cpp  serialize.h  util.cpp  util.h  validation.cpp
src/crypto/: aes.cpp  aes.h
src/libraries/secp256k1/: gen_context
src/wallet/: rpcdump.cpp  rpcwallet.cpp
